<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">IWorkout</string>
    <string name="hello">Hello IWorkout!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string><string name="Save">Salvar</string><string name="cancel">Cancelar</string><string name="name">Nome</string><string name="exercices">Exercicios:</string>
    <string name="show">show</string>
    <string name="ok">ok</string>
    <string name="choose_your_train">Selecione seu treino:</string>
    <string name="create_new">Cadastrar novo</string>
    <string name="edit">Editar</string>
    <string name="train">Treinar</string>
    <string name="continue1">Avancar</string>
    <string name="choose_the_type_excercise">Escolha o tipo de exercicio do treino:</string>
    <string name="novo">Novo</string>
    <string name="Train_label"><![CDATA[Treino>]]></string>
    <string name="trainLabel">trainLabel</string>
    <string name="app_id">1451773371743756</string>

</resources>