<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
    <ListView
            android:id="@+id/list"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button3"/>

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:layout_centerHorizontal="true"
            android:background="@drawable/graficos"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/choose_your_train"
            android:id="@+id/textView"
            android:layout_below="@+id/imageView"
            android:layout_alignParentLeft="false"
            android:layout_centerHorizontal="true"/>

    <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinner"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_new"
            android:id="@+id/button"
            android:layout_below="@+id/spinner"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="15dp"
            android:onClick="onClickNewTrain"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            android:id="@+id/button2"
            android:layout_below="@+id/spinner"
            android:layout_toRightOf="@+id/button"
            android:layout_alignParentLeft="false"
            android:layout_marginLeft="25dp"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/train"
            android:id="@+id/button3"
            android:layout_below="@+id/spinner"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"/>
</RelativeLayout>